[gd_scene load_steps=16 format=2]

[ext_resource path="res://fonts/consola.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://textures/Max.png" type="Texture" id=2]
[ext_resource path="res://frames/test.gd" type="Script" id=3]
[ext_resource path="res://sounds/Главное меню ~ Пять ночей с Максом REMAKE (2021).ogg" type="AudioStream" id=4]
[ext_resource path="res://textures/star.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 3

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[sub_resource type="CanvasItemMaterial" id=10]
blend_mode = 3

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_top = -2.0
margin_right = 1024.0
margin_bottom = 653.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 17.0
margin_top = 16.1353
margin_right = 534.0
margin_bottom = 269.135
custom_fonts/font = SubResource( 1 )
text = "Пять
Ночей с
Максом
R E M A K E"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Colored remake" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_left = 18.8381
margin_top = 204.324
margin_right = 378.838
margin_bottom = 261.324
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Game" type="Button" parent="."]
margin_left = 17.0
margin_top = 283.347
margin_right = 355.0
margin_bottom = 325.347
custom_fonts/font = SubResource( 3 )
text = "Новая Игра"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load Game" type="Button" parent="."]
margin_left = 17.0
margin_top = 346.24
margin_right = 355.0
margin_bottom = 388.24
custom_fonts/font = SubResource( 4 )
text = "Загрузить игру"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Extras" type="Button" parent="."]
margin_left = 17.0
margin_top = 410.24
margin_right = 355.0
margin_bottom = 452.24
custom_fonts/font = SubResource( 4 )
text = "Экстра"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Change Language" type="Button" parent="."]
margin_left = 22.0827
margin_top = 656.219
margin_right = 188.083
margin_bottom = 698.219
custom_fonts/font = SubResource( 5 )
text = "RU/ENG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Max" type="Sprite" parent="."]
position = Vector2( 785.909, 311.393 )
rotation = 3.14159
scale = Vector2( -0.619642, -0.565451 )
texture = ExtResource( 2 )
flip_h = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -16.935
autoplay = true

[node name="Ver" type="Label" parent="."]
margin_left = 378.838
margin_top = 562.0
margin_right = 658.838
margin_bottom = 617.0
custom_fonts/font = SubResource( 6 )
text = "v1.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dev" type="Label" parent="."]
margin_left = 17.0
margin_top = 562.0
margin_right = 353.0
margin_bottom = 617.0
custom_fonts/font = SubResource( 6 )
text = "AZIE Games 2021 © ST2005
"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="."]
visible = false
margin_left = 669.0
margin_top = 283.347
margin_right = 1005.0
margin_bottom = 325.347
custom_fonts/font = SubResource( 7 )
text = "Кредиты"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Button" parent="."]
visible = false
margin_left = 669.0
margin_top = 346.24
margin_right = 1005.0
margin_bottom = 388.24
custom_fonts/font = SubResource( 8 )
text = "Инструкции (Спойлеры!)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Custom Night" type="Button" parent="."]
visible = false
margin_left = 669.0
margin_top = 410.0
margin_right = 1005.0
margin_bottom = 452.0
custom_fonts/font = SubResource( 9 )
text = "Своя ночь"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompNight5" type="Sprite" parent="."]
visible = false
position = Vector2( 201.5, 46.5 )
scale = Vector2( 0.465, 0.465 )
texture = ExtResource( 5 )

[node name="StarColor" type="ColorRect" parent="CompNight5"]
material = SubResource( 10 )
margin_left = 436.129
margin_top = -80.0
margin_right = 603.129
margin_bottom = 73.0
color = Color( 0, 0.976471, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompNight6" type="Sprite" parent="."]
visible = false
position = Vector2( 281.5, 46.5 )
scale = Vector2( 0.465, 0.465 )
texture = ExtResource( 5 )

[node name="StarColor" type="ColorRect" parent="CompNight6"]
material = SubResource( 10 )
margin_left = -82.1506
margin_top = -80.0
margin_right = 84.8494
margin_bottom = 73.0
color = Color( 0.968627, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompNight8" type="Sprite" parent="."]
visible = false
position = Vector2( 361.5, 46.5 )
scale = Vector2( 0.465, 0.465 )
texture = ExtResource( 5 )

[node name="StarColor" type="ColorRect" parent="CompNight8"]
material = SubResource( 10 )
margin_left = -80.0
margin_top = -80.0
margin_right = 87.0
margin_bottom = 73.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompNightAll20" type="Sprite" parent="."]
visible = false
position = Vector2( 441.5, 46.5 )
scale = Vector2( 0.465, 0.465 )
texture = ExtResource( 5 )

[node name="StarColor" type="ColorRect" parent="CompNightAll20"]
material = SubResource( 10 )
margin_left = -80.0
margin_top = -80.0
margin_right = 87.0
margin_bottom = 73.0
color = Color( 0, 0.976471, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flicker" type="Timer" parent="."]
autostart = true
[connection signal="pressed" from="New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="Load Game" to="." method="_on_Load_Game_pressed"]
[connection signal="pressed" from="Extras" to="." method="_on_Extras_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="Custom Night" to="." method="_on_CustomNight_pressed"]
[connection signal="timeout" from="flicker" to="." method="_on_flicker_timeout"]
